Add background color to HTML element to avoid white bands on elastic scroll

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   --color-complementary: #191919;
 }
 
+html {
+  background: var(--color-complementary);
+}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
