--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,7 @@ body {
   background: var(--color-primary);
   color: var(--color-complementary);
   border: 0;
+  border-radius: 0;
   padding: 0;
   height: 45px;
   line-height: 45px;
@@ -101,6 +102,7 @@ body {
   width: 100%;
   background: transparent;
   border: 0;
+  border-radius: 0;
   border-bottom: 1px solid var(--color-primary);
   color: var(--color-secondary);
   font-size: 1em;
